// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description.jsx Should display the Description Component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hero is-small has-background-light"
      >
        <div
          class="hero-body"
        >
          <div
            class="container columns"
          >
            <div
              class="column is-1"
            />
            <div
              class="column is-10"
            >
              <h1
                class="is-size-3  margin-top-25"
              >
                Before You Continue
              </h1>
              <div
                class="message"
              >
                <div
                  class="message-body margin-top-25"
                >
                  <p
                    class="is-size-5"
                  >
                    <strong>
                      Our Mission
                    </strong>
                     is to be a platform for growing businesses. We aim to help people find businesses that will solve their problems (and interact with them), We aim to help businesses find and interact with other businesses, to foster knowledge-sharing, connection and collaboration.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="column is-1 "
            />
          </div>
        </div>
      </div>
      <div
        class="hero is-small has-background-white margin-top-25"
      >
        <div
          class="hero-body "
        >
          <div
            class="container columns"
          >
            <div
              class="column is-1"
            />
            <div
              class="column is-10"
            >
              <h1
                class="is-size-4"
              >
                Worksfair Terms of Service
              </h1>
              <div
                class="message is-info"
              >
                <div
                  class="message-body margin-top-25"
                >
                  <p
                    class="is-size-6"
                  >
                    By accessing this Website, accessible from https://worksfair.com - a service by Ideosynergy, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law. These Terms of Service has been created with the help of the 
                    <span>
                       
                    </span>
                    <a
                      href="https://www.termsofservicegenerator.net"
                    >
                      Terms of Service Generator
                    </a>
                    <span>
                       
                    </span>
                    and the 
                    <span>
                       
                    </span>
                    <a
                      href="https://www.privacy-policy-template.com"
                    >
                      Privacy Policy Template
                    </a>
                    .
                  </p>
                  <p
                    class="margin-top-25"
                  >
                    Please read 
                    <span>
                       
                    </span>
                    <a
                      href="/terms-of-service"
                    >
                      our Terms of Service
                    </a>
                     and
                    <a
                      href="/privacy-policy"
                    >
                       our Privacy Policy
                    </a>
                    .
                  </p>
                  <p>
                    By clicking 
                    <i>
                      "Continue"
                    </i>
                    , you agree to these terms.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="column is-1 "
            />
          </div>
        </div>
      </div>
      <div
        class="hero is-small has-background-white"
      >
        <div
          class="hero-body "
        >
          <div
            class="container columns"
          >
            <div
              class="column is-1"
            />
            <div
              class="column is-10"
            >
              <p
                class="buttons"
              >
                <a
                  class="button is-info is-medium"
                  href="/login"
                >
                  Continue
                </a>
                <a
                  class="button is-info is-medium is-outlined"
                  href="/"
                >
                  Go Back
                </a>
              </p>
            </div>
            <div
              class="column is-1 "
            />
          </div>
        </div>
      </div>
      <footer
        class="footer "
      >
        <div
          class="content has-text-centered"
        >
          Copyright 
          2019
           Worksfair. All Rights Reserved.
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <div
      class="hero is-small has-background-light"
    >
      <div
        class="hero-body"
      >
        <div
          class="container columns"
        >
          <div
            class="column is-1"
          />
          <div
            class="column is-10"
          >
            <h1
              class="is-size-3  margin-top-25"
            >
              Before You Continue
            </h1>
            <div
              class="message"
            >
              <div
                class="message-body margin-top-25"
              >
                <p
                  class="is-size-5"
                >
                  <strong>
                    Our Mission
                  </strong>
                   is to be a platform for growing businesses. We aim to help people find businesses that will solve their problems (and interact with them), We aim to help businesses find and interact with other businesses, to foster knowledge-sharing, connection and collaboration.
                </p>
              </div>
            </div>
          </div>
          <div
            class="column is-1 "
          />
        </div>
      </div>
    </div>
    <div
      class="hero is-small has-background-white margin-top-25"
    >
      <div
        class="hero-body "
      >
        <div
          class="container columns"
        >
          <div
            class="column is-1"
          />
          <div
            class="column is-10"
          >
            <h1
              class="is-size-4"
            >
              Worksfair Terms of Service
            </h1>
            <div
              class="message is-info"
            >
              <div
                class="message-body margin-top-25"
              >
                <p
                  class="is-size-6"
                >
                  By accessing this Website, accessible from https://worksfair.com - a service by Ideosynergy, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law. These Terms of Service has been created with the help of the 
                  <span>
                     
                  </span>
                  <a
                    href="https://www.termsofservicegenerator.net"
                  >
                    Terms of Service Generator
                  </a>
                  <span>
                     
                  </span>
                  and the 
                  <span>
                     
                  </span>
                  <a
                    href="https://www.privacy-policy-template.com"
                  >
                    Privacy Policy Template
                  </a>
                  .
                </p>
                <p
                  class="margin-top-25"
                >
                  Please read 
                  <span>
                     
                  </span>
                  <a
                    href="/terms-of-service"
                  >
                    our Terms of Service
                  </a>
                   and
                  <a
                    href="/privacy-policy"
                  >
                     our Privacy Policy
                  </a>
                  .
                </p>
                <p>
                  By clicking 
                  <i>
                    "Continue"
                  </i>
                  , you agree to these terms.
                </p>
              </div>
            </div>
          </div>
          <div
            class="column is-1 "
          />
        </div>
      </div>
    </div>
    <div
      class="hero is-small has-background-white"
    >
      <div
        class="hero-body "
      >
        <div
          class="container columns"
        >
          <div
            class="column is-1"
          />
          <div
            class="column is-10"
          >
            <p
              class="buttons"
            >
              <a
                class="button is-info is-medium"
                href="/login"
              >
                Continue
              </a>
              <a
                class="button is-info is-medium is-outlined"
                href="/"
              >
                Go Back
              </a>
            </p>
          </div>
          <div
            class="column is-1 "
          />
        </div>
      </div>
    </div>
    <footer
      class="footer "
    >
      <div
        class="content has-text-centered"
      >
        Copyright 
        2019
         Worksfair. All Rights Reserved.
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Privacy.jsx Should display the Privacy Component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hero is-small has-background-white margin-top-25"
      >
        <div
          class="hero-body "
        >
          <div
            class="container columns"
          >
            <div
              class="column is-1"
            />
            <div
              class="column is-10"
            >
              <h1
                class="is-size-3"
              >
                Worksfair Privacy Policy
              </h1>
              <div
                class="content"
              >
                <p>
                  At Worksfair.com, accessible from https://worksfair.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Worksfair.com and how we use it.
                </p>
                <p>
                  If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at t3rdday@yahoo.com
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Log Files
                </h2>
                <p>
                  Worksfair.com follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Cookies and Web Beacons
                </h2>
                <p>
                  Like any other website, Worksfair.com uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Google DoubleClick DART Cookie
                </h2>
                <p>
                  Google is one of a third-party vendor on our site. It also uses cookies, known as DART cookies, to serve ads to our site visitors based upon their visit to www.website.com and other sites on the internet. However, visitors may choose to decline the use of DART cookies by visiting the Google ad and content network Privacy Policy at the following URL – 
                  <a
                    href="https://policies.google.com/technologies/ads"
                  >
                    https://policies.google.com/technologies/ads
                  </a>
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Our Advertising Partners
                </h2>
                <p>
                  Some of advertisers on our site may use cookies and web beacons. Our advertising partners are listed below. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access, we hyperlinked to their Privacy Policies below.
                </p>
                <ul>
                  <li>
                    <p>
                      Google
                    </p>
                    <p>
                      <a
                        href="https://policies.google.com/technologies/ads"
                      >
                        https://policies.google.com/technologies/ads
                      </a>
                    </p>
                  </li>
                </ul>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Privacy Policies
                </h2>
                <p>
                  You may consult this list to find the Privacy Policy for each of the advertising partners of Worksfair.com. Our Privacy Policy was created with the help of the 
                  <a
                    href="https://www.privacypolicygenerator.info"
                  >
                    Privacy Policy Generator
                  </a>
                  . 
                </p>
                <p>
                  Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Worksfair.com, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
                </p>
                <p>
                  Note that Worksfair.com has no access to or control over these cookies that are used by third-party advertisers.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Third Party Privacy Policies
                </h2>
                <p>
                  Worksfair.com's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You may find a complete list of these Privacy Policies and their links here: Privacy Policy Links.
                </p>
                <p>
                  You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Children's Information
                </h2>
                <p>
                  Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
                </p>
                <p>
                  Worksfair.com does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Online Privacy Policy Only
                </h2>
                <p>
                  This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Worksfair.com. This policy is not applicable to any information collected offline or via channels other than this website.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  Consent
                </h2>
                <p>
                  By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
                </p>
              </div>
            </div>
            <div
              class="column is-1 "
            />
          </div>
        </div>
      </div>
      <footer
        class="footer "
      >
        <div
          class="content has-text-centered"
        >
          Copyright 
          2019
           Worksfair. All Rights Reserved.
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <div
      class="hero is-small has-background-white margin-top-25"
    >
      <div
        class="hero-body "
      >
        <div
          class="container columns"
        >
          <div
            class="column is-1"
          />
          <div
            class="column is-10"
          >
            <h1
              class="is-size-3"
            >
              Worksfair Privacy Policy
            </h1>
            <div
              class="content"
            >
              <p>
                At Worksfair.com, accessible from https://worksfair.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Worksfair.com and how we use it.
              </p>
              <p>
                If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at t3rdday@yahoo.com
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Log Files
              </h2>
              <p>
                Worksfair.com follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Cookies and Web Beacons
              </h2>
              <p>
                Like any other website, Worksfair.com uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Google DoubleClick DART Cookie
              </h2>
              <p>
                Google is one of a third-party vendor on our site. It also uses cookies, known as DART cookies, to serve ads to our site visitors based upon their visit to www.website.com and other sites on the internet. However, visitors may choose to decline the use of DART cookies by visiting the Google ad and content network Privacy Policy at the following URL – 
                <a
                  href="https://policies.google.com/technologies/ads"
                >
                  https://policies.google.com/technologies/ads
                </a>
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Our Advertising Partners
              </h2>
              <p>
                Some of advertisers on our site may use cookies and web beacons. Our advertising partners are listed below. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access, we hyperlinked to their Privacy Policies below.
              </p>
              <ul>
                <li>
                  <p>
                    Google
                  </p>
                  <p>
                    <a
                      href="https://policies.google.com/technologies/ads"
                    >
                      https://policies.google.com/technologies/ads
                    </a>
                  </p>
                </li>
              </ul>
              <h2
                class="is-size-4 margin-top-25"
              >
                Privacy Policies
              </h2>
              <p>
                You may consult this list to find the Privacy Policy for each of the advertising partners of Worksfair.com. Our Privacy Policy was created with the help of the 
                <a
                  href="https://www.privacypolicygenerator.info"
                >
                  Privacy Policy Generator
                </a>
                . 
              </p>
              <p>
                Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Worksfair.com, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
              </p>
              <p>
                Note that Worksfair.com has no access to or control over these cookies that are used by third-party advertisers.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Third Party Privacy Policies
              </h2>
              <p>
                Worksfair.com's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You may find a complete list of these Privacy Policies and their links here: Privacy Policy Links.
              </p>
              <p>
                You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Children's Information
              </h2>
              <p>
                Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
              </p>
              <p>
                Worksfair.com does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Online Privacy Policy Only
              </h2>
              <p>
                This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Worksfair.com. This policy is not applicable to any information collected offline or via channels other than this website.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                Consent
              </h2>
              <p>
                By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
              </p>
            </div>
          </div>
          <div
            class="column is-1 "
          />
        </div>
      </div>
    </div>
    <footer
      class="footer "
    >
      <div
        class="content has-text-centered"
      >
        Copyright 
        2019
         Worksfair. All Rights Reserved.
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Terms.jsx Should display the Terms Component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hero is-small has-background-white margin-top-25"
      >
        <div
          class="hero-body "
        >
          <div
            class="container columns"
          >
            <div
              class="column is-1"
            />
            <div
              class="column is-10"
            >
              <h1
                class="is-size-3"
              >
                Worksfair Terms of Service
              </h1>
              <div
                class="content"
              >
                <h2
                  class="is-size-4 margin-top-25"
                >
                  1. Terms
                </h2>
                <p>
                  By accessing this Website, accessible from https://worksfair.com - a service by Ideosynergy, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law. These Terms of Service has been created with the help of the 
                  <a
                    href="https://www.termsofservicegenerator.net"
                  >
                    Terms of Service Generator
                  </a>
                   and the 
                  <a
                    href="https://www.privacy-policy-template.com"
                  >
                    Privacy Policy Template
                  </a>
                  .
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  2. Use License
                </h2>
                <p>
                  Permission is granted to temporarily download one copy of the materials on Ideosynergy's Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
                </p>
                <ul>
                  <li>
                    modify or copy the materials;
                  </li>
                  <li>
                    use the materials for any commercial purpose or for any public display;
                  </li>
                  <li>
                    attempt to reverse engineer any software contained on Ideosynergy's Website;
                  </li>
                  <li>
                    remove any copyright or other proprietary notations from the materials; or
                  </li>
                  <li>
                    transferring the materials to another person or "mirror" the materials on any other server.
                  </li>
                </ul>
                <p>
                  This will let Ideosynergy to terminate upon violations of any of these restrictions. Upon termination, your viewing right will also be terminated and you should destroy any downloaded materials in your possession whether it is printed or electronic format.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  3. Disclaimer
                </h2>
                <p>
                  All the materials on Ideosynergy’s Website are provided "as is". Ideosynergy makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore, Ideosynergy does not make any representations concerning the accuracy or reliability of the use of the materials on its Website or otherwise relating to such materials or any sites linked to this Website.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  4. Limitations
                </h2>
                <p>
                  Ideosynergy or its suppliers will not be hold accountable for any damages that will arise with the use or inability to use the materials on Ideosynergy’s Website, even if Ideosynergy or an authorize representative of this Website has been notified, orally or written, of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations of liability for incidental damages, these limitations may not apply to you.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  5. Revisions and Errata
                </h2>
                <p>
                  The materials appearing on Ideosynergy’s Website may include technical, typographical, or photographic errors. Ideosynergy will not promise that any of the materials in this Website are accurate, complete, or current. Ideosynergy may change the materials contained on its Website at any time without notice. Ideosynergy does not make any commitment to update the materials.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  6. Links
                </h2>
                <p>
                  Ideosynergy has not reviewed all of the sites linked to its Website and is not responsible for the contents of any such linked site. The presence of any link does not imply endorsement by Ideosynergy of the site. The use of any linked website is at the user’s own risk.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  7. Site Terms of Use Modifications
                </h2>
                <p>
                  Ideosynergy may revise these Terms of Use for its Website at any time without prior notice. By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  8. Your Privacy
                </h2>
                <p>
                  Please read 
                  <a
                    href="/privacy-policy"
                  >
                    our Privacy Policy
                  </a>
                  .
                </p>
                <h2
                  class="is-size-4 margin-top-25"
                >
                  9. Governing Law
                </h2>
                <p>
                  Any claim related to Ideosynergy's Website shall be governed by the laws of Nigeria without regards to its conflict of law provisions.
                </p>
              </div>
            </div>
            <div
              class="column is-1 "
            />
          </div>
        </div>
      </div>
      <footer
        class="footer "
      >
        <div
          class="content has-text-centered"
        >
          Copyright 
          2019
           Worksfair. All Rights Reserved.
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <div
      class="hero is-small has-background-white margin-top-25"
    >
      <div
        class="hero-body "
      >
        <div
          class="container columns"
        >
          <div
            class="column is-1"
          />
          <div
            class="column is-10"
          >
            <h1
              class="is-size-3"
            >
              Worksfair Terms of Service
            </h1>
            <div
              class="content"
            >
              <h2
                class="is-size-4 margin-top-25"
              >
                1. Terms
              </h2>
              <p>
                By accessing this Website, accessible from https://worksfair.com - a service by Ideosynergy, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law. These Terms of Service has been created with the help of the 
                <a
                  href="https://www.termsofservicegenerator.net"
                >
                  Terms of Service Generator
                </a>
                 and the 
                <a
                  href="https://www.privacy-policy-template.com"
                >
                  Privacy Policy Template
                </a>
                .
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                2. Use License
              </h2>
              <p>
                Permission is granted to temporarily download one copy of the materials on Ideosynergy's Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
              </p>
              <ul>
                <li>
                  modify or copy the materials;
                </li>
                <li>
                  use the materials for any commercial purpose or for any public display;
                </li>
                <li>
                  attempt to reverse engineer any software contained on Ideosynergy's Website;
                </li>
                <li>
                  remove any copyright or other proprietary notations from the materials; or
                </li>
                <li>
                  transferring the materials to another person or "mirror" the materials on any other server.
                </li>
              </ul>
              <p>
                This will let Ideosynergy to terminate upon violations of any of these restrictions. Upon termination, your viewing right will also be terminated and you should destroy any downloaded materials in your possession whether it is printed or electronic format.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                3. Disclaimer
              </h2>
              <p>
                All the materials on Ideosynergy’s Website are provided "as is". Ideosynergy makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore, Ideosynergy does not make any representations concerning the accuracy or reliability of the use of the materials on its Website or otherwise relating to such materials or any sites linked to this Website.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                4. Limitations
              </h2>
              <p>
                Ideosynergy or its suppliers will not be hold accountable for any damages that will arise with the use or inability to use the materials on Ideosynergy’s Website, even if Ideosynergy or an authorize representative of this Website has been notified, orally or written, of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations of liability for incidental damages, these limitations may not apply to you.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                5. Revisions and Errata
              </h2>
              <p>
                The materials appearing on Ideosynergy’s Website may include technical, typographical, or photographic errors. Ideosynergy will not promise that any of the materials in this Website are accurate, complete, or current. Ideosynergy may change the materials contained on its Website at any time without notice. Ideosynergy does not make any commitment to update the materials.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                6. Links
              </h2>
              <p>
                Ideosynergy has not reviewed all of the sites linked to its Website and is not responsible for the contents of any such linked site. The presence of any link does not imply endorsement by Ideosynergy of the site. The use of any linked website is at the user’s own risk.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                7. Site Terms of Use Modifications
              </h2>
              <p>
                Ideosynergy may revise these Terms of Use for its Website at any time without prior notice. By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                8. Your Privacy
              </h2>
              <p>
                Please read 
                <a
                  href="/privacy-policy"
                >
                  our Privacy Policy
                </a>
                .
              </p>
              <h2
                class="is-size-4 margin-top-25"
              >
                9. Governing Law
              </h2>
              <p>
                Any claim related to Ideosynergy's Website shall be governed by the laws of Nigeria without regards to its conflict of law provisions.
              </p>
            </div>
          </div>
          <div
            class="column is-1 "
          />
        </div>
      </div>
    </div>
    <footer
      class="footer "
    >
      <div
        class="content has-text-centered"
      >
        Copyright 
        2019
         Worksfair. All Rights Reserved.
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
